--- a/index.html
+++ b/index.html
@@ -386,16 +386,16 @@ License: You must have a valid license purchased only from themeforest(the above
 															<ul class="list-unstyled list-custom-aaron">
 																<li class="">
 																	<i class="fa fa-arrow-right" style="color: #adadad;"></i> 
-																	Loyalty System (Tupperware Brands)
+																	Loyalty System <!--  (Tupperware Brands) -->
 																</li>
 																<li class="">
 																	<i class="fa fa-arrow-right" style="color: #adadad;"></i> 
-																	Cable Management System (Alcatel, DPWH)
+																	Cable Management System <!--  (Alcatel, DPWH) -->
 																</li>
 																<li class="">
 																	<i class="fa fa-arrow-right" style="color: #adadad;"></i> 
 																	Formalistics (A software platform that makes possible creation of software systems based on electronic forms)
-																	<ul class="list-unstyled list-custom-aaron">
+																	<!-- <ul class="list-unstyled list-custom-aaron">
 																		<li>
 																			<i class="fa fa-arrow-right" style="color: #adadad;"></i> 
 																			Clients:
@@ -458,7 +458,7 @@ License: You must have a valid license purchased only from themeforest(the above
 																				</li>
 																			</ul>
 																		</li>
-																	</ul>
+																	</ul> -->
 																</li>
 															</ul>
 														</li>
