--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@ License: You must have a valid license purchased only from themeforest(the above
 <!-- BEGIN HEAD -->
 <head>
 <meta charset="utf-8"/>
-<meta property="og:image" content="http://aarontolentino123.github.io/assets/admin/pages/media/profile/aaron.jpg" />
+<meta property="og:image" content="http://aarontolentino123.github.io/assets/aaron.jpg" />
 <title>Aaron Tolentino</title>
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
