--- a/index.html
+++ b/index.html
@@ -18,6 +18,8 @@ License: You must have a valid license purchased only from themeforest(the above
 <!-- BEGIN HEAD -->
 <head>
 <meta charset="utf-8"/>
+<meta property="og:title" content="Aaron Tolentino CV" />
+<meta property="og:url" content="http://aarontolentino123.github.io/" />
 <meta property="og:image" content="http://aarontolentino123.github.io/assets/aaron.jpg" />
 <title>Aaron Tolentino</title>
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
