--- a/index.html
+++ b/index.html
@@ -826,69 +826,105 @@ License: You must have a valid license purchased only from themeforest(the above
 									<div class="portlet-title">
 										<div class="caption caption-md">
 											<i class="icon-bar-chart theme-font hide"></i>
+											<span class="caption-subject font-blue-madison bold uppercase">Seminars and Trainings</span>
+										</div>
+									</div>
+									<div class="portlet-body" style="padding-top: 0px">
+										<div style="margin-left: 3%">
+											<ul class="list-unstyled list-custom-aaron">
+												<li class="clearfix">
+													<div class="pull-left">
+														<i class="fa fa-arrow-right" style="color: #adadad;"></i> 
+														PHP Conference 2016
+													</div>
+													<div class="pull-left" style="margin-left: 10px">
+														October 13 - 14, 2016
+													</div>
+												</li>
+												<li class="clearfix">
+													<div class="pull-left">
+														<i class="fa fa-arrow-right" style="color: #adadad;"></i> 
+														DevCon Summit 2016
+													</div> 
+													<div class="pull-left" style="margin-left: 10px">
+														November 5 - 6, 2016
+													</div>
+												</li>
+											</ul>
+										</div>
+									</div>
+								</div>
+								<!-- END PORTLET -->
+							</div>
+						</div>
+						<div class="row">
+							<div class="col-md-12">
+								<!-- BEGIN PORTLET -->
+								<div class="portlet light">
+									<div class="portlet-title">
+										<div class="caption caption-md">
+											<i class="icon-bar-chart theme-font hide"></i>
 											<span class="caption-subject font-blue-madison bold uppercase">Personal Information</span>
 										</div>
 									</div>
 									<div class="portlet-body" style="padding-top: 0px">
-										<div style="margin-left: 3%">	
-											<div style="margin-left: 3%">
-												<ul class="list-unstyled list-custom-aaron">
-													<li class="clearfix">
-														<div class="pull-left">
-															<i class="fa fa-arrow-right" style="color: #adadad;"></i> 
-															Citizenship:
-														</div> 
-														<div class="pull-left col-md-offset-1">
-															Filipino
-														</div>
-													</li>
-													<li class="clearfix">
-														<div class="pull-left">
-															<i class="fa fa-arrow-right" style="color: #adadad;"></i> 
-															Civil Status:
-														</div> 
-														<div class="pull-left col-md-offset-1">
-															Married
-														</div>
-													</li>
-													<li class="clearfix">
-														<div class="pull-left">
-															<i class="fa fa-arrow-right" style="color: #adadad;"></i> 
-															Date of Birth:
-														</div> 
-														<div class="pull-left col-md-offset-1">
-															September 27, 1991
-														</div>
-													</li>
-													<li class="clearfix">
-														<div class="pull-left">
-															<i class="fa fa-arrow-right" style="color: #adadad;"></i> 
-															Gender:
-														</div> 
-														<div class="pull-left col-md-offset-1">
-															Male
-														</div>
-													</li>
-													<li class="clearfix">
-														<div class="pull-left">
-															<i class="fa fa-arrow-right" style="color: #adadad;"></i> 
-															Number of Kids:
-														</div> 
-														<div class="pull-left col-md-offset-1">
-															1
-														</div>
-													</li>
-													<li class="clearfix">
-														<div class="pull-left">
-															<i class="fa fa-arrow-right" style="color: #adadad;"></i> 
-															Highest Educational Achievments:
-														</div> 
-														<div class="pull-left" style="margin-left: 10px">
-															Bachelor of Science in Information Technology @ Jose Rizal University Batch 2012
-														</div>
-													</li>
-												</ul>
-											</div>
+										<div style="margin-left: 3%">
+											<ul class="list-unstyled list-custom-aaron">
+												<li class="clearfix">
+													<div class="pull-left">
+														<i class="fa fa-arrow-right" style="color: #adadad;"></i> 
+														Citizenship:
+													</div> 
+													<div class="pull-left col-md-offset-1">
+														Filipino
+													</div>
+												</li>
+												<li class="clearfix">
+													<div class="pull-left">
+														<i class="fa fa-arrow-right" style="color: #adadad;"></i> 
+														Civil Status:
+													</div> 
+													<div class="pull-left col-md-offset-1">
+														Married
+													</div>
+												</li>
+												<li class="clearfix">
+													<div class="pull-left">
+														<i class="fa fa-arrow-right" style="color: #adadad;"></i> 
+														Date of Birth:
+													</div> 
+													<div class="pull-left col-md-offset-1">
+														September 27, 1991
+													</div>
+												</li>
+												<li class="clearfix">
+													<div class="pull-left">
+														<i class="fa fa-arrow-right" style="color: #adadad;"></i> 
+														Gender:
+													</div> 
+													<div class="pull-left col-md-offset-1">
+														Male
+													</div>
+												</li>
+												<li class="clearfix">
+													<div class="pull-left">
+														<i class="fa fa-arrow-right" style="color: #adadad;"></i> 
+														Number of Kids:
+													</div> 
+													<div class="pull-left col-md-offset-1">
+														1
+													</div>
+												</li>
+												<li class="clearfix">
+													<div class="pull-left">
+														<i class="fa fa-arrow-right" style="color: #adadad;"></i> 
+														Highest Educational Achievments:
+													</div> 
+													<div class="pull-left" style="margin-left: 10px">
+														Bachelor of Science in Information Technology @ Jose Rizal University Batch 2012
+													</div>
+												</li>
+											</ul>
 										</div>
 									</div>
 								</div>
@@ -906,119 +942,117 @@ License: You must have a valid license purchased only from themeforest(the above
 										</div>
 									</div>
 									<div class="portlet-body" style="padding-top: 0px">
-										<div style="margin-left: 3%">	
-											<div style="margin-left: 3%">
-												<ul class="list-unstyled list-custom-aaron">
-													<li class="clearfix">
-														<div class="pull-left">
-															<i class="fa fa-check" style="color: #adadad;"></i> 
-															Name:
-														</div> 
-														<div class="pull-left" style="margin-left: 10px">
-															Ramheel P. Guiao
-														</div>
-													</li>
-													<li class="clearfix">
-														<div class="pull-left">
-															<i class="fa fa-arrow-right" style="color: #adadad;"></i> 
-															Email:
-														</div> 
-														<div class="pull-left" style="margin-left: 10px">
-															ramheelpguiao@gmail.com
-														</div>
-													</li>
-													<li class="clearfix">
-														<div class="pull-left">
-															<i class="fa fa-arrow-right" style="color: #adadad;"></i> 
-															Phone Number:
-														</div> 
-														<div class="pull-left" style="margin-left: 10px">
-															09061953412
-														</div>
-													</li>
-													<li class="clearfix">
-														<div class="pull-left">
-															<i class="fa fa-arrow-right" style="color: #adadad;"></i> 
-															Position:
-														</div> 
-														<div class="pull-left" style="margin-left: 10px">
-															Senior Backend Develop / Team Lead
-														</div>
-													</li>
-													<li class="clearfix" style="margin-top: 25px">
-														<div class="pull-left">
-															<i class="fa fa-check" style="color: #adadad;"></i> 
-															Name:
-														</div> 
-														<div class="pull-left" style="margin-left: 10px">
-															Jewel Jeims Tolentino
-														</div>
-													</li>
-													<li class="clearfix">
-														<div class="pull-left">
-															<i class="fa fa-arrow-right" style="color: #adadad;"></i> 
-															Email:
-														</div> 
-														<div class="pull-left" style="margin-left: 10px">
-															jeweljeimstolentino@gmail.com
-														</div>
-													</li>
-													<li class="clearfix">
-														<div class="pull-left">
-															<i class="fa fa-arrow-right" style="color: #adadad;"></i> 
-															Phone Number:
-														</div> 
-														<div class="pull-left" style="margin-left: 10px">
-															09479960498
-														</div>
-													</li>
-													<li class="clearfix">
-														<div class="pull-left">
-															<i class="fa fa-arrow-right" style="color: #adadad;"></i> 
-															Position:
-														</div> 
-														<div class="pull-left" style="margin-left: 10px">
-															Technical Director / Application Developer
-														</div>
-													</li>
-													<li class="clearfix" style="margin-top: 25px">
-														<div class="pull-left">
-															<i class="fa fa-check" style="color: #adadad;"></i> 
-															Name:
-														</div> 
-														<div class="pull-left" style="margin-left: 10px">
-															Patricia Sanchez
-														</div>
-													</li>
-													<li class="clearfix">
-														<div class="pull-left">
-															<i class="fa fa-arrow-right" style="color: #adadad;"></i> 
-															Email:
-														</div> 
-														<div class="pull-left" style="margin-left: 10px">
-															Pattie_alejandro@yahoo.com
-														</div>
-													</li>
-													<li class="clearfix">
-														<div class="pull-left">
-															<i class="fa fa-arrow-right" style="color: #adadad;"></i> 
-															Phone Number:
-														</div> 
-														<div class="pull-left" style="margin-left: 10px">
-															09399146400
-														</div>
-													</li>
-													<li class="clearfix">
-														<div class="pull-left">
-															<i class="fa fa-arrow-right" style="color: #adadad;"></i> 
-															Position:
-														</div> 
-														<div class="pull-left" style="margin-left: 10px">
-															HR and Admin Manager
-														</div>
-													</li>
-												</ul>
-											</div>
+										<div style="margin-left: 3%">
+											<ul class="list-unstyled list-custom-aaron">
+												<li class="clearfix">
+													<div class="pull-left">
+														<i class="fa fa-check" style="color: #adadad;"></i> 
+														Name:
+													</div> 
+													<div class="pull-left" style="margin-left: 10px">
+														Ramheel P. Guiao
+													</div>
+												</li>
+												<li class="clearfix">
+													<div class="pull-left">
+														<i class="fa fa-arrow-right" style="color: #adadad;"></i> 
+														Email:
+													</div> 
+													<div class="pull-left" style="margin-left: 10px">
+														ramheelpguiao@gmail.com
+													</div>
+												</li>
+												<li class="clearfix">
+													<div class="pull-left">
+														<i class="fa fa-arrow-right" style="color: #adadad;"></i> 
+														Phone Number:
+													</div> 
+													<div class="pull-left" style="margin-left: 10px">
+														09061953412
+													</div>
+												</li>
+												<li class="clearfix">
+													<div class="pull-left">
+														<i class="fa fa-arrow-right" style="color: #adadad;"></i> 
+														Position:
+													</div> 
+													<div class="pull-left" style="margin-left: 10px">
+														Senior Backend Develop / Team Lead
+													</div>
+												</li>
+												<li class="clearfix" style="margin-top: 25px">
+													<div class="pull-left">
+														<i class="fa fa-check" style="color: #adadad;"></i> 
+														Name:
+													</div> 
+													<div class="pull-left" style="margin-left: 10px">
+														Jewel Jeims Tolentino
+													</div>
+												</li>
+												<li class="clearfix">
+													<div class="pull-left">
+														<i class="fa fa-arrow-right" style="color: #adadad;"></i> 
+														Email:
+													</div> 
+													<div class="pull-left" style="margin-left: 10px">
+														jeweljeimstolentino@gmail.com
+													</div>
+												</li>
+												<li class="clearfix">
+													<div class="pull-left">
+														<i class="fa fa-arrow-right" style="color: #adadad;"></i> 
+														Phone Number:
+													</div> 
+													<div class="pull-left" style="margin-left: 10px">
+														09479960498
+													</div>
+												</li>
+												<li class="clearfix">
+													<div class="pull-left">
+														<i class="fa fa-arrow-right" style="color: #adadad;"></i> 
+														Position:
+													</div> 
+													<div class="pull-left" style="margin-left: 10px">
+														Technical Director / Application Developer
+													</div>
+												</li>
+												<li class="clearfix" style="margin-top: 25px">
+													<div class="pull-left">
+														<i class="fa fa-check" style="color: #adadad;"></i> 
+														Name:
+													</div> 
+													<div class="pull-left" style="margin-left: 10px">
+														Patricia Sanchez
+													</div>
+												</li>
+												<li class="clearfix">
+													<div class="pull-left">
+														<i class="fa fa-arrow-right" style="color: #adadad;"></i> 
+														Email:
+													</div> 
+													<div class="pull-left" style="margin-left: 10px">
+														Pattie_alejandro@yahoo.com
+													</div>
+												</li>
+												<li class="clearfix">
+													<div class="pull-left">
+														<i class="fa fa-arrow-right" style="color: #adadad;"></i> 
+														Phone Number:
+													</div> 
+													<div class="pull-left" style="margin-left: 10px">
+														09399146400
+													</div>
+												</li>
+												<li class="clearfix">
+													<div class="pull-left">
+														<i class="fa fa-arrow-right" style="color: #adadad;"></i> 
+														Position:
+													</div> 
+													<div class="pull-left" style="margin-left: 10px">
+														HR and Admin Manager
+													</div>
+												</li>
+											</ul>
 										</div>
 									</div>
 								</div>
