--- a/index.html
+++ b/index.html
@@ -89,8 +89,8 @@ License: You must have a valid license purchased only from themeforest(the above
 							<!-- END SIDEBAR USER TITLE -->
 							<!-- SIDEBAR BUTTONS -->
 							<div class="profile-userbuttons">
-								<a class="btn btn-circle green-haze btn-sm">Follow</button>
-								<a href="mailto:aarontolentino123@gmail.com" class="btn btn-circle btn-danger btn-sm">Message</a>
+								<!-- <a class="btn btn-circle green-haze btn-sm">Follow</button> -->
+								<a href="mailto:aarontolentino123@gmail.com" class="btn btn-circle btn-danger btn-sm">Message me!</a>
 							</div>
 							<!-- END SIDEBAR BUTTONS -->
 							<!-- SIDEBAR MENU -->
@@ -201,10 +201,12 @@ License: You must have a valid license purchased only from themeforest(the above
 														<li><i class="fa fa-arrow-right" style="color: #adadad;"></i> NODE.JS – 1 Year(knowledgeable)</li>
 														<li><i class="fa fa-arrow-right" style="color: #adadad;"></i> Angular – 1 Year(knowledgeable)</li>
 														<li>
-															<i class="fa fa-arrow-right" style="color: #adadad;"></i> Open Source PHP Frameworks:
+															<i class="fa fa-arrow-right" style="color: #adadad;"></i> Open Source PHP Frameworks
 															<ul class="list-unstyled list-custom-aaron">
-																<li><i class="fa fa-arrow-right" style="color: #adadad;"></i> Laravel 5.0 and above – 1 Year(Intermediate)</li>
+																<li><i class="fa fa-arrow-right" style="color: #adadad;"></i> Laravel – 1 Year(Intermediate)</li>
 																<li><i class="fa fa-arrow-right" style="color: #adadad;"></i> Codeigniter – 1 Year(Intermediate)</li>
+																<li><i class="fa fa-arrow-right" style="color: #adadad;"></i> Symfony – 1 Year(knowledgeable)</li>
+																<li><i class="fa fa-arrow-right" style="color: #adadad;"></i> Zend – 1 Year(knowledgeable)</li>
 															</ul>
 														</li>
 													</ul>
@@ -230,6 +232,7 @@ License: You must have a valid license purchased only from themeforest(the above
 													<ul class="list-unstyled list-custom-aaron">
 														<li><i class="fa fa-arrow-right" style="color: #adadad;"></i> WordPress – below 1 Year (knowledgeable)</li>
 														<li><i class="fa fa-arrow-right" style="color: #adadad;"></i> Drupal – below 1 Year (knowledgeable)</li>
+														<li><i class="fa fa-arrow-right" style="color: #adadad;"></i> Moodle(LMS) – below 1 Year (Intermediate)</li>
 													</ul>
 												</li>
 											</ul>
@@ -267,14 +270,14 @@ License: You must have a valid license purchased only from themeforest(the above
 												<li>
 													<ul class="list-unstyled list-custom-aaron">
 														<li><i class="fa fa-arrow-right" style="color: #adadad;"></i> WappStak – 1 Year(knowledgeable)</li>
-														<li><i class="fa fa-arrow-right" style="color: #adadad;"></i> WAMP, LAMP, XAMPP – 4 Year (advance)</li>
+														<li><i class="fa fa-arrow-right" style="color: #adadad;"></i> WAMP, LAMP, XAMPP – 4 Years (advance)</li>
 													</ul>
 												</li>
 												<li><h4>Operating System</h4></li>
 												<li>
 													<ul class="list-unstyled list-custom-aaron">
-														<li><i class="fa fa-arrow-right" style="color: #adadad;"></i> Linux(Ubuntu, Centos, Redhat) – 2 Year(knowledgeable)</li>
-														<li><i class="fa fa-arrow-right" style="color: #adadad;"></i> Windows – 4 Year(knowledgeable)</li>
+														<li><i class="fa fa-arrow-right" style="color: #adadad;"></i> Linux(Ubuntu, Centos, Redhat) – 2 Years(knowledgeable)</li>
+														<li><i class="fa fa-arrow-right" style="color: #adadad;"></i> Windows – 4 Years(knowledgeable)</li>
 													</ul>
 												</li>
 											</ul>
@@ -485,7 +488,7 @@ License: You must have a valid license purchased only from themeforest(the above
 																Duration:
 															</div> 
 															<div class="pull-left col-md-offset-1">
-																March 2012 - October 2016
+																March 2012 - October 2012
 															</div>
 														</li>
 														<li class="clearfix">
